tdf#153681 RTF export: fix extra cell regression at nested tables

Table rows exported with an extra empty cell, if there was a
nested table in them (and not in the last cell).

Partial revert of commit 1f77a5e8d5bf8a7f1b7bd7206996d2b2efc59462
"n#203704 fix RTF export table output for subtables".

Note: the partially reverted code was for the old table format
(used before OOo 2.3). This old format is partially converted to the
new table format since commit e366c928819c44b5c253c45dca6dae40b71c9808
"sw: ODF import: convert the simplest sub-tables to rowspan tables".

Change-Id: I63ebefbb99e1a95cd60ce8d8dc34c307573d4b58
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147887
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>